--- a/arresto.html
+++ b/arresto.html
@@ -26,7 +26,7 @@
     </style>
 </head>
 <body>
-    <img src="/Users/matteoromano/Desktop/Informatica/Pagina smd/images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
+    <img src="/images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Arresto</h1>
         <form id="moduloArresto">
