--- a/arresto.html
+++ b/arresto.html
@@ -84,14 +84,27 @@
             jsonData[key] = value;
         });
 
-        fetch("https://script.google.com/macros/s/AKfycbz-foqhCKV6OtF4ft-LRoLj0zXlz4nrI1Z_W9XAZ3pQPX9dcjxD2Gyr8KZTc3DW7Q/exec", {
-            method: "POST",
-            body: JSON.stringify(jsonData),
-            headers: { "Content-Type": "application/json" }
-        })
-        .then(response => response.text())
-        .then(data => alert(data))
-        .catch(error => console.error("Errore:", error));
+        
+fetch("https://script.google.com/macros/s/AKfycbz-foqhCKV6OtF4ft-LRoLj0zXlz4nrI1Z_W9XAZ3pQPX9dcjxD2Gyr8KZTc3DW7Q/exec", {
+  method: "POST",
+  headers: {
+    "Content-Type": "application/json"
+  },
+  body: JSON.stringify({
+    nome: "Mario",
+    corpo: "Polizia",
+    grado: "Tenente",
+    carcerato: "Sì",
+    motivo: "Rapina",
+    luogo: "Milano",
+    data: "2025-02-05",
+    ora: "14:30",
+    colleghi: "Luca, Marco"
+  })
+})
+.then(response => response.json())
+.then(data => console.log("Risposta:", data))
+.catch(error => console.error("Errore:", error));
     });
     </script>
 </body>
