--- a/arresto.html
+++ b/arresto.html
@@ -81,21 +81,25 @@
     let formData = new FormData(this);
     let jsonData = {};
     
+    // Crea l'oggetto jsonData dai dati del modulo
     formData.forEach((value, key) => {
-        jsonData[key] = value; // Crea un oggetto con i dati del modulo
+        jsonData[key] = value; // Aggiungi ogni campo nel nostro oggetto jsonData
     });
 
+    // Log dei dati che stiamo inviando per il debug
+    console.log("Dati del modulo da inviare:", jsonData);
+
     // Invia i dati tramite fetch al Google Apps Script
-    fetch("https://script.google.com/macros/s/AKfycbwFZAulQ1R9NWiCIfsNnlOhD1tEcCiLWXtsHcD8CtpCYBHn1Meou3NM-DzE3-fXQ-3B/exec", {
+    fetch("https://script.google.com/macros/s/AKfycbz-foqhCKV6OtF4ft-LRoLj0zXlz4nrI1Z_W9XAZ3pQPX9dcjxD2Gyr8KZTc3DW7Q/exec", {
         method: "POST",
         headers: {
             "Content-Type": "application/json"
         },
-        body: JSON.stringify(jsonData) // Invia i dati raccolti nel modulo
+        body: JSON.stringify(jsonData) // Invia i dati raccolti nel modulo come JSON
     })
     .then(response => response.json())
-    .then(data => console.log("Risposta:", data))
-    .catch(error => console.error("Errore:", error));
+    .then(data => console.log("Risposta dal server:", data))  // Log della risposta dal server
+    .catch(error => console.error("Errore nella richiesta:", error));
 });
     </script>
 </body>
