--- a/arresto.html
+++ b/arresto.html
@@ -76,7 +76,7 @@
     <script>
     // Assicurati che il DOM sia caricato prima di aggiungere l'event listener
     document.addEventListener("DOMContentLoaded", function() {
-        document.getElementById("moduloArresto").addEventListener("submit", function(event) {
+        document.getElementById("ModuloArresto").addEventListener("submit", function(event) {
             event.preventDefault();
             
             // Raccogli i dati dal modulo
