--- a/arresto.html
+++ b/arresto.html
@@ -74,7 +74,7 @@
     </div>
 
     <script>
-    document.getElementById("ModuloArresto").addEventListener("submit", function(event) {
+    document.getElementById("moduloArresto").addEventListener("submit", function(event) {
     event.preventDefault();
     
     // Raccogli i dati dal modulo
