--- a/arresto.html
+++ b/arresto.html
@@ -74,33 +74,28 @@
     </div>
 
     <script>
-    document.addEventListener("DOMContentLoaded", function() {
-    // Dopo che la pagina è stata caricata, aggiungiamo l'event listener al modulo
+document.addEventListener("DOMContentLoaded", function() {
     document.getElementById("ModuloArresto").addEventListener("submit", function(event) {
         event.preventDefault();
         
-        // Raccogli i dati dal modulo
         let formData = new FormData(this);
         let jsonData = {};
         
-        // Crea l'oggetto jsonData dai dati del modulo
         formData.forEach((value, key) => {
-            jsonData[key] = value; // Aggiungi ogni campo nel nostro oggetto jsonData
+            jsonData[key] = value;
         });
 
-        // Log dei dati che stiamo inviando per il debug
         console.log("Dati del modulo da inviare:", jsonData);
 
-        // Invia i dati tramite fetch al Google Apps Script
-        fetch("https://script.google.com/macros/s/AKfycbwFeXUJjkpPCEcskeAcPX4einjgAAJotXqe8CCkBMYk8InJAy57mmzqz0z15b50iw5J/exec", {
+        fetch("https://script.google.com/macros/s/AKfycbxNwPznnL9HawkkvGed_QT9K9McFBzGpBRn4XTYIMf1XS7HSaRvKB7c4KXtxKkkOFlD/exec", {
             method: "POST",
             headers: {
                 "Content-Type": "application/json"
             },
-            body: JSON.stringify(jsonData) // Invia i dati raccolti nel modulo come JSON
+            body: JSON.stringify(jsonData)
         })
-        .then(response => response.json())
-        .then(data => console.log("Risposta dal server:", data))  // Log della risposta dal server
+        .then(response => response.json()) 
+        .then(data => console.log("Risposta dal server:", data))
         .catch(error => console.error("Errore nella richiesta:", error));
     });
 });
