--- a/arresto.html
+++ b/arresto.html
@@ -29,7 +29,7 @@
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Arresto</h1>
-        <form method="post" action="" id="ModuloArresto">
+        <form method="post" action="" name="ModuloArresto">
             <div class="form-group">
                 <label for="nome">Nome (IGN):</label>
                 <input type="text" class="form-control" id="nome" name="nome_ign" required>
