--- a/arresto.html
+++ b/arresto.html
@@ -28,48 +28,40 @@
 <body>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
-        <h1 class="text-center">Modulo Arresto</h1>
-        <form method="post" action="" name="ModuloArresto">
+          <form method="post" action="" name="ModuloArresto">
+            <h4>Compila il modulo</h4>
             <div class="form-group">
-                <label for="nome">Nome (IGN):</label>
-                <input type="text" class="form-control" id="nome" name="nome_ign" required>
+                <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
             </div>
             <div class="form-group">
-                <label for="corpo">Corpo di appartenenza:</label>
                 <select class="form-control" id="corpo" name="corpo_appartenza" required>
+                    <option value="" disabled selected>Corpo di appartenenza</option>
                     <option value="Esercito">Esercito</option>
                     <option value="Carabinieri">Carabinieri</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="grado">Grado:</label>
-                <input type="text" class="form-control" id="grado" name="grado" required>
+                <input type="text" class="form-control" id="grado" name="grado" placeholder="Grado" required>
             </div>
             <div class="form-group">
-                <label for="carcerato">Carcerato:</label>
-                <input type="text" class="form-control" id="carcerato" name="carcerato" required>
+                <input type="text" class="form-control" id="carcerato" name="carcerato" placeholder="Carcerato" required>
             </div>
             <div class="form-group">
-                <label for="motivo">Motivo:</label>
-                <textarea class="form-control" id="motivo" name="motivo" required></textarea>
+                <textarea class="form-control" id="motivo" name="motivo" rows="3" placeholder="Motivo" required></textarea>
             </div>
             <div class="form-group">
-                <label for="luogo">Luogo:</label>
-                <input type="text" class="form-control" id="luogo" name="luogo" required>
+                <input type="text" class="form-control" id="luogo" name="luogo" placeholder="Luogo" required>
             </div>
             <div class="form-group">
-                <label for="data">Data:</label>
                 <input type="date" class="form-control" id="data" name="data" required>
             </div>
             <div class="form-group">
-                <label for="ora">Ora:</label>
                 <input type="time" class="form-control" id="ora" name="ora" required>
             </div>
             <div class="form-group">
-                <label for="colleghi">Colleghi presenti:</label>
-                <textarea class="form-control" id="colleghi" name="colleghi_presenti" required></textarea>
+                <textarea class="form-control" id="colleghi" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary btn-block">Invia</button>
+            <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
 
