--- a/arresto.html
+++ b/arresto.html
@@ -11,14 +11,14 @@
         }
         .container {
             max-width: 600px;
-            margin-top: 100px;
+            margin-top: 100px; /* Aggiungi un margine superiore per evitare la sovrapposizione */
         }
         .form-group {
             margin-bottom: 20px;
         }
         .logo {
             max-width: 15%;
-            height: auto;
+            height: auto; 
             position: absolute;
             top: 20px;
             left: 20px;
@@ -28,7 +28,7 @@
 <body>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
-        <form name="ModuloArresto">
+          <form method="post" action="" name="ModuloArresto">
             <h4>Compila il modulo</h4>
             <div class="form-group">
                 <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
@@ -65,7 +65,6 @@
         </form>
     </div>
 
-    <!-- Aggiunto il link al file JavaScript -->
-    <script src="Google_Sheets.js"></script>
+   <script src="Google Sheets.js></script>
 </body>
 </html>
