--- a/arresto.html
+++ b/arresto.html
@@ -28,7 +28,7 @@
 <body>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
-          <form method="post" action="" name="ModuloArresto">
+          <form method="post" action="https://script.google.com/macros/s/AKfycbyGZmZ1IuXbHDIcJ4jrUs6ofmeRAUEjTfL02yWN2k1yqGjehUfwzZlbhr27LRHX5QpdPg/exec" name="ModuloArresto">
             <h4>Compila il modulo</h4>
             <div class="form-group">
                 <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
@@ -65,6 +65,6 @@
         </form>
     </div>
 
-   <script src="Google Sheets.js></script>
+   <script src="Google_Sheets.js"></script>
 </body>
 </html>
