--- a/sequestro.html
+++ b/sequestro.html
@@ -32,7 +32,6 @@
 <body>
     <img src="/Users/matteoromano/Desktop/Informatica/Pagina smd/images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
-        <h1 class="text-center">Modulo Sequestro</h1>
         <form method="post" action="" name="ModuloSequestro">
             <h4>Compila il modulo</h4>
             <div class="form-group">
@@ -56,6 +55,9 @@
             </div>
             <div class="form-group">
                 <input type="text" class="form-control" id="luogo" name="luogo" placeholder="Luogo" required>
+            </div>
+            <div class="form-group">
+                <textarea type="text" class="form-control" id="oggetti" name="oggetti_rinvenuti" rows="3" placeholder="Oggetti rinvenuti" required></textarea>
             </div>
             <div class="form-group">
                 <input type="date" class="form-control" id="data" name="data" required>
