--- a/sequestro.html
+++ b/sequestro.html
@@ -30,7 +30,7 @@
     </style>
 </head>
 <body>
-    <img src="/Users/matteoromano/Desktop/Informatica/Pagina smd/images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
+    <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <form method="post" action="" name="ModuloSequestro">
             <h4>Compila il modulo</h4>
