--- a/servizio.html
+++ b/servizio.html
@@ -23,6 +23,7 @@
     </style>
 </head>
 <body>
+        <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Servizio</h1>
         <form id="form_servizio" action="salva_dati.php" method="POST">
