--- a/multa.html
+++ b/multa.html
@@ -11,57 +11,58 @@
         }
         .container {
             max-width: 600px;
-            margin-top: 30px;
+            margin-top: 100px; /* Aggiungi un margine superiore per evitare la sovrapposizione */
         }
         .form-group {
             margin-bottom: 20px;
         }
+        .logo {
+            max-width: 15%;
+            height: auto; 
+            position: absolute;
+            top: 20px;
+            left: 20px;
+        }
     </style>
 </head>
 <body>
+    <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Multa</h1>
-        <form action="salva_dati.php" method="POST">
+        <form method="post" action="" name="ModuloMulta">
+            <h4>Compila il modulo</h4>
             <div class="form-group">
-                <label for="nome">Nome (IGN):</label>
-                <input type="text" class="form-control" id="nome" name="nome_ign" required>
+                <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
             </div>
             <div class="form-group">
-                <label for="corpo">Corpo di appartenenza:</label>
                 <select class="form-control" id="corpo" name="corpo_appartenza" required>
+                    <option value="" disabled selected>Corpo di appartenenza</option>
                     <option value="Esercito">Esercito</option>
                     <option value="Carabinieri">Carabinieri</option>
                 </select>
             </div>
             <div class="form-group">
-                <label for="grado">Grado:</label>
-                <input type="text" class="form-control" id="grado" name="grado" required>
+                <input type="text" class="form-control" id="grado" name="grado" placeholder="Grado" required>
             </div>
             <div class="form-group">
-                <label for="violazione">Tipo di violazione:</label>
-                <input type="text" class="form-control" id="violazione" name="tipo_violazione" required>
+                <input type="text" class="form-control" id="multato" name="multato" placeholder="Multato" required>
             </div>
             <div class="form-group">
-                <label for="luogo">Luogo:</label>
-                <input type="text" class="form-control" id="luogo" name="luogo" required>
+                <textarea class="form-control" id="motivo" name="motivo" rows="3" placeholder="Motivo" required></textarea>
             </div>
             <div class="form-group">
-                <label for="data">Data:</label>
+                <input type="text" class="form-control" id="luogo" name="luogo" placeholder="Luogo" required>
+            </div>
+            <div class="form-group">
                 <input type="date" class="form-control" id="data" name="data" required>
             </div>
             <div class="form-group">
-                <label for="ora">Ora:</label>
                 <input type="time" class="form-control" id="ora" name="ora" required>
             </div>
             <div class="form-group">
-                <label for="importo">Importo della multa (€):</label>
-                <input type="number" class="form-control" id="importo" name="importo" required>
+                <textarea class="form-control" id="colleghi" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
             </div>
-            <div class="form-group">
-                <label for="colleghi">Colleghi presenti:</label>
-                <textarea class="form-control" id="colleghi" name="colleghi_presenti" required></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Invia</button>
+            <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
 </body>
