--- a/sequestro.html
+++ b/sequestro.html
@@ -30,8 +30,9 @@
     </style>
 </head>
 <body>
-    <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
+    <img src="/Users/matteoromano/Desktop/Informatica/Pagina smd/images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
+        <h1 class="text-center">Modulo Sequestro</h1>
         <form method="post" action="" name="ModuloSequestro">
             <h4>Compila il modulo</h4>
             <div class="form-group">
@@ -57,9 +58,6 @@
                 <input type="text" class="form-control" id="luogo" name="luogo" placeholder="Luogo" required>
             </div>
             <div class="form-group">
-                <textarea type="text" class="form-control" id="oggetti" name="oggetti_rinvenuti" rows="3" placeholder="Oggetti rinvenuti" required></textarea>
-            </div>
-            <div class="form-group">
                 <input type="date" class="form-control" id="data" name="data" required>
             </div>
             <div class="form-group">
@@ -73,3 +71,5 @@
     </div>
 </body>
 </html>
+
+Ti dico io quando ho finito di mandarti i codici
