--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 </head>
 <body>
     <div class="container text-center">
+        <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
         <h1>Seleziona un modulo</h1>
         <div class="mt-4">
             <a href="arresto.html" class="btn btn-danger">🚔 Arresto</a>
