--- a/index.html
+++ b/index.html
@@ -38,6 +38,6 @@
             <a href="servizio.html" class="btn btn-success">🛠️ Servizio</a>
         </div>
     </div>
-    <div class="supporto">Per supporto @laasqualee</div>
+    <div class="supporto">Per supporto @laasquale 📲</div>
 </body>
 </html>
