--- a/index.html
+++ b/index.html
@@ -25,11 +25,22 @@
             font-size: 16px;
             color: gray;
         }
+        .logo {
+            max-width: 15%; /* Riduce la dimensione dell'immagine */
+            height: auto;
+            position: absolute;
+            top: 20px; /* Posiziona l'immagine in alto */
+        }
+        .content {
+            text-align: center;
+            margin-top: auto;
+            margin-bottom: auto;
+        }
     </style>
 </head>
 <body>
-    <div class="container text-center">
-        <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
+    <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
+    <div class="container text-center content">
         <h1>Seleziona un modulo</h1>
         <div class="mt-4">
             <a href="arresto.html" class="btn btn-danger">🚔 Arresto</a>
