--- a/sequestro.html
+++ b/sequestro.html
@@ -69,5 +69,17 @@
             <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
+    <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyGZmZ1IuXbHDIcJ4jrUs6ofmeRAUEjTfL02yWN2k1yqGjehUfwzZlbhr27LRHX5QpdPg/exec'
+    const form = document.forms['ModuloSequestro']
+
+    form.addEventListener('submit', e => {
+        e.preventDefault()
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+        .then(response => alert("Rapporto inviato correttamente."))
+        .then(() => { window.location.reload(); })
+        .catch(error => console.error('Errore!', error.message))
+    })
+</script>
 </body>
 </html>
