--- a/sequestro.html
+++ b/sequestro.html
@@ -66,6 +66,9 @@
             <div class="form-group">
                 <textarea class="form-control" id="colleghi" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
             </div>
+            <div class="form-group">
+                <textarea class="form-control" id="oggetti" name="oggetti_rinvenuti" rows="3" placeholder="Oggetti illegali rinvenuti" required></textarea>
+            </div>
             <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
