--- a/servizio.html
+++ b/servizio.html
@@ -33,7 +33,7 @@
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Servizio</h1>
-        <form id="form_servizio" action="salva_dati.php" method="POST">
+        <form method="post" name="ModuloServizio">
             <h4>Compila il modulo</h4>
             <div class="form-group">
                 <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
@@ -61,5 +61,18 @@
             <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
+
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyGZmZ1IuXbHDIcJ4jrUs6ofmeRAUEjTfL02yWN2k1yqGjehUfwzZlbhr27LRHX5QpdPg/exec'
+        const form = document.forms['ModuloServizio']
+
+        form.addEventListener('submit', e => {
+            e.preventDefault()
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+            .then(response => alert("Rapporto inviato correttamente."))
+            .then(() => { window.location.reload(); })
+            .catch(error => console.error('Errore!', error.message))
+        })
+    </script>
 </body>
 </html>
