--- a/multa.html
+++ b/multa.html
@@ -30,6 +30,7 @@
     <div class="container">
         <h1 class="text-center">Modulo Multa</h1>
         <form method="post" action="" name="ModuloMulta">
+            <input type="hidden" name="modulo" value="ModuloMulta">
             <h4>Compila il modulo</h4>
             <div class="form-group">
                 <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
