--- a/sequestro.html
+++ b/sequestro.html
@@ -34,7 +34,7 @@
     <div class="container">
         <h1 class="text-center">Modulo Sequestro</h1>
         <form method="post" action="" name="ModuloSequestro">
-            <input type="hidden" name="modulo" value="ModuloSquestro">
+            <input type="hidden" name="modulo" value="squestro">
             <h4>Compila il modulo</h4>
             <div class="form-group">
                 <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
