--- a/arresto.html
+++ b/arresto.html
@@ -28,7 +28,7 @@
 <body>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
-          <form method="post" action="https://script.google.com/macros/s/AKfycbyGZmZ1IuXbHDIcJ4jrUs6ofmeRAUEjTfL02yWN2k1yqGjehUfwzZlbhr27LRHX5QpdPg/exec" name="ModuloArresto">
+          <form method="post" action="" name="ModuloArresto">
               <input type="hidden" name="modulo" value="ModuloArresto">
             <h4>Compila il modulo</h4>
             <div class="form-group">
@@ -66,7 +66,7 @@
         </form>
     </div>
     <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzr3FQun7cTt_0BBVLR82zJN804t32LN4DqNV1cY_4YPTNpSaB6gAELW0Cc_IMb1TUWcw/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwCuCAsn0snZaRtMQg63WQbB72kSYTFPD7_baDexRi7JmhL2TGTW2xqmAxSiU55gB-_RA/exec'
     const form = document.forms['ModuloArresto']
 
     form.addEventListener('submit', e => {
