--- a/arresto.html
+++ b/arresto.html
@@ -11,7 +11,7 @@
         }
         .container {
             max-width: 600px;
-            margin-top: 100px; /* Aggiungi un margine superiore per evitare la sovrapposizione */
+            margin-top: 100px;
         }
         .form-group {
             margin-bottom: 20px;
@@ -28,54 +28,66 @@
 <body>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
-          <form method="post" action="" name="ModuloArresto">
-              <input type="hidden" name="modulo" value="ModuloArresto">
+        <form id="moduloArresto">
+            <input type="hidden" name="modulo" value="ModuloArresto">
             <h4>Compila il modulo</h4>
             <div class="form-group">
-                <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
+                <input type="text" class="form-control" name="nome_ign" placeholder="Nome (IGN)" required>
             </div>
             <div class="form-group">
-                <select class="form-control" id="corpo" name="corpo_appartenza" required>
+                <select class="form-control" name="corpo_appartenza" required>
                     <option value="" disabled selected>Corpo di appartenenza</option>
                     <option value="Esercito">Esercito</option>
                     <option value="Carabinieri">Carabinieri</option>
                 </select>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="grado" name="grado" placeholder="Grado" required>
+                <input type="text" class="form-control" name="grado" placeholder="Grado" required>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="carcerato" name="carcerato" placeholder="Carcerato" required>
+                <input type="text" class="form-control" name="carcerato" placeholder="Carcerato" required>
             </div>
             <div class="form-group">
-                <textarea class="form-control" id="motivo" name="motivo" rows="3" placeholder="Motivo" required></textarea>
+                <textarea class="form-control" name="motivo" rows="3" placeholder="Motivo" required></textarea>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="luogo" name="luogo" placeholder="Luogo" required>
+                <input type="text" class="form-control" name="luogo" placeholder="Luogo" required>
             </div>
             <div class="form-group">
-                <input type="date" class="form-control" id="data" name="data" required>
+                <input type="date" class="form-control" name="data" required>
             </div>
             <div class="form-group">
-                <input type="time" class="form-control" id="ora" name="ora" required>
+                <input type="time" class="form-control" name="ora" required>
             </div>
             <div class="form-group">
-                <textarea class="form-control" id="colleghi" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
+                <textarea class="form-control" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
             </div>
             <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
-    <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbwCuCAsn0snZaRtMQg63WQbB72kSYTFPD7_baDexRi7JmhL2TGTW2xqmAxSiU55gB-_RA/exec'
-    const form = document.forms['ModuloArresto']
 
-    form.addEventListener('submit', e => {
-        e.preventDefault()
-        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
-        .then(response => alert("Rapporto inviato correttamente."))
-        .then(() => { window.location.reload(); })
-        .catch(error => console.error('Errore!', error.message))
-    })
-</script>
+    <script>
+        const scriptURL = 'https://script.google.com/macros/s/AKfycbyGZmZ1IuXbHDIcJ4jrUs6ofmeRAUEjTfL02yWN2k1yqGjehUfwzZlbhr27LRHX5QpdPg/exec';
+        const form = document.querySelector('#moduloArresto');
+
+        form.addEventListener('submit', e => {
+            e.preventDefault();
+            fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error("Errore nella richiesta al server.");
+                }
+                return response.text();
+            })
+            .then(() => {
+                alert("Rapporto inviato correttamente.");
+                window.location.reload();
+            })
+            .catch(error => {
+                alert("Errore durante l'invio del modulo!");
+                console.error('Errore!', error.message);
+            });
+        });
+    </script>
 </body>
 </html>
