--- a/sequestro.html
+++ b/sequestro.html
@@ -50,7 +50,7 @@
                 <input type="text" class="form-control" id="grado" name="grado" placeholder="Grado" required>
             </div>
             <div class="form-group">
-                <input type="text" class="form-control" id="sequestrato" name="sequestrato" placeholder="Sequestrato" required>
+                <input type="text" class="form-control" id="soggetto" name="soggetto" placeholder="Soggetto" required>
             </div>
             <div class="form-group">
                 <textarea class="form-control" id="motivo" name="motivo" rows="3" placeholder="Motivo" required></textarea>
