--- a/multa.html
+++ b/multa.html
@@ -63,6 +63,9 @@
             <div class="form-group">
                 <textarea class="form-control" id="colleghi" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
             </div>
+            <div class="form-group">
+                <input type="number" class="form-control" id="importo" name="importo" rows="3" placeholder="Importo" required>
+            </div>
             <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
