--- a/sequestro.html
+++ b/sequestro.html
@@ -68,13 +68,13 @@
                 <textarea class="form-control" id="colleghi" name="colleghi_presenti" rows="3" placeholder="Colleghi presenti" required></textarea>
             </div>
             <div class="form-group">
-                <textarea class="form-control" id="oggetti" name="oggetti_rinvenuti" rows="3" placeholder="Oggetti illegali rinvenuti" required></textarea>
+                <textarea class="form-control" id="oggetti" name="oggetti" rows="3" placeholder="Oggetti illegali rinvenuti" required></textarea>
             </div>
             <input type="submit" class="btn btn-primary btn-block" value="Invia">
         </form>
     </div>
     <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbytHqs0PyOZFjPglSHGuYNi9_dx06Pt9-Wwu0nfjkl8Am-a-6pZMF9ySjXO4RjBbpdnKw/exec'
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbxTjQrAVRl3RiP-q05BD1z9M_CpXKr1HzmndROcwQr-lFKcXcGiQgUqIwCkobraA4tY6A/exec'
     const form = document.forms['ModuloSequestro']
 
     form.addEventListener('submit', e => {
