--- a/sequestro.html
+++ b/sequestro.html
@@ -33,7 +33,7 @@
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Sequestro</h1>
-        <form method="post" action="" name="ModuloSequestro">
+        <form method="post" action="" name="sequestro">
             <input type="hidden" name="modulo" value="squestro">
             <h4>Compila il modulo</h4>
             <div class="form-group">
@@ -75,7 +75,7 @@
     </div>
     <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbxTjQrAVRl3RiP-q05BD1z9M_CpXKr1HzmndROcwQr-lFKcXcGiQgUqIwCkobraA4tY6A/exec'
-    const form = document.forms['ModuloSequestro']
+    const form = document.forms['sequestro']
 
     form.addEventListener('submit', e => {
         e.preventDefault()
