--- a/sequestro.html
+++ b/sequestro.html
@@ -33,8 +33,8 @@
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
         <h1 class="text-center">Modulo Sequestro</h1>
-        <form method="post" action="" name="sequestro">
-            <input type="hidden" name="modulo" value="squestro">
+        <form method="post" action="" name="Modulo Sequestro">
+            <input type="hidden" name="modulo" value="Modulo Sequestro">
             <h4>Compila il modulo</h4>
             <div class="form-group">
                 <input type="text" class="form-control" id="nome" name="nome_ign" placeholder="Nome (IGN)" required>
@@ -75,7 +75,7 @@
     </div>
     <script>
     const scriptURL = 'https://script.google.com/macros/s/AKfycbxTjQrAVRl3RiP-q05BD1z9M_CpXKr1HzmndROcwQr-lFKcXcGiQgUqIwCkobraA4tY6A/exec'
-    const form = document.forms['sequestro']
+    const form = document.forms['Modulo Sequestro']
 
     form.addEventListener('submit', e => {
         e.preventDefault()
