--- a/inxex.html
+++ b/inxex.html
@@ -64,7 +64,7 @@
             .then(data => {
                 if (data.success) {
                     localStorage.setItem('authenticated', 'true');
-                    window.location.href = 'index.html';
+                    window.location.href = 'old_index.html';
                 } else {
                     document.getElementById('error').style.display = 'block';
                 }
