--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-direction: column; /* Aggiungi per mettere il form sotto l'immagine */
             background-color: #f8f9fa;
+            margin: 0;
+        }
+        .logo {
+            max-width: 15%;
+            height: auto;
+            margin-bottom: 20px; /* Aggiungi margine per distanziare l'immagine dal form */
         }
         .login-container {
             max-width: 400px;
@@ -21,11 +28,6 @@
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             border-radius: 8px;
             text-align: center;
-        }
-        .logo {
-            max-width: 15%;
-            height: auto;
-            margin-bottom: 20px; /* Aggiungi un margine inferiore per distanziare l'immagine dal contenitore di login */
         }
     </style>
 </head>
