--- a/arresto.html
+++ b/arresto.html
@@ -28,6 +28,7 @@
 <body>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
     <div class="container">
+        <h1 class="text-center">Modulo Arresto</h1>
         <form id="moduloArresto">
             <input type="hidden" name="modulo" value="ModuloArresto">
             <h4>Compila il modulo</h4>
