--- a/old_index.html
+++ b/old_index.html
@@ -51,7 +51,10 @@
             <a href="arresto.html" class="btn btn-danger">🚔 Arresto</a>
             <a href="sequestro.html" class="btn btn-warning">📦 Sequestro</a>
             <a href="multa.html" class="btn btn-primary">💰 Multa</a>
-            <a href="servizio.html" class="btn btn-success">🛠️ Servizio</a>
+            <a href="servizio.html" class="btn btn-success">🕰️ Servizio</a>
+        </div>
+        <div class="row align-items-center justify-content-center">
+            <a href="richieste.html" class="btn btn-success">📋 richieste</a>
         </div>
     </div>
     <div class="supporto">Per supporto @laasquale 📲</div>
