--- a/old_index.html
+++ b/old_index.html
@@ -41,7 +41,7 @@
 <body>
     <script>
         if (localStorage.getItem('authenticated') !== 'true') {
-            window.location.href = 'login.html';
+            window.location.href = 'index.html';
         }
     </script>
     <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
