--- a/old_index.html
+++ b/old_index.html
@@ -54,7 +54,7 @@
             <a href="servizio.html" class="btn btn-success">🕰️ Servizio</a>
         </div>
         <div class="row align-items-center justify-content-center">
-            <a href="richieste.html" class="btn btn-success">📋 richieste</a>
+            <a href="richieste.html" class="btn btn-success">📋 Richieste</a>
         </div>
     </div>
     <div class="supporto">Per supporto @laasquale 📲</div>
