--- a/index.html
+++ b/index.html
@@ -4,75 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <style>
-        body {
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column; /* Aggiungi per mettere il form sotto l'immagine */
-            background-color: #f8f9fa;
-            margin: 0;
-        }
-        .logo {
-            max-width: 15%;
-            height: auto;
-            margin-bottom: 20px; /* Aggiungi margine per distanziare l'immagine dal form */
-        }
-        .login-container {
-            max-width: 400px;
-            width: 100%;
-            padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="Google_Sheet.js"></script>
 </head>
 <body>
-    <img src="images/2025-02-04_22.44.27-removebg-preview.png" alt="logo smd" class="logo">
-    <div class="login-container">
-        <h2 class="text-center">Login</h2>
-        <form id="loginForm">
-            <div class="form-group">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username" required>
+    <div class="container">
+        <div class="row justify-content-center mt-5">
+            <div class="col-md-6">
+                <div class="card">
+                    <div class="card-body">
+                        <h2 class="card-title text-center mb-4">Login</h2>
+                        <form id="loginForm">
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" required>
+                            </div>
+                            <button type="submit" class="btn btn-primary w-100">Accedi</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password" required>
-            </div>
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
-        </form>
-        <div id="error" class="text-danger mt-3" style="display: none;">Username o password errati</div>
+        </div>
     </div>
 
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function(event) {
-            event.preventDefault();
+        document.getElementById('loginForm').addEventListener('submit', async function(e) {
+            e.preventDefault();
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
-
-            fetch('https://script.google.com/macros/s/AKfycbzw0QN1MFT2pQ_nlRVwnotGZL0fxEqb9UoFsot4LqQ7E4e0tBc20xU4CK6t6F2AVPRr1Q/exec', {
-                method: 'POST',
-                body: new URLSearchParams({
-                    username: username,
-                    password: password
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    localStorage.setItem('authenticated', 'true');
-                    window.location.href = 'old_index.html';
-                } else {
-                    document.getElementById('error').style.display = 'block';
-                }
-            });
+            
+            const { isAuthenticated, role } = await checkCredentials(username, password);
+            
+            if (isAuthenticated) {
+                sessionStorage.setItem('userRole', role);
+                window.location.href = 'servizio.html';
+            } else {
+                alert('Credenziali non valide');
+            }
         });
     </script>
-    <div class="supporto">Per supporto @laasquale 📲</div>
 </body>
 </html>
+
