--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
             });
         });
     </script>
-    <div class="supporto">Per supporto @laasquale 📲</div>
+    <div class="supporto">Per supporto @laapuissancee 📲</div>
 </body>
 </html>
