--- a/old_index.html
+++ b/old_index.html
@@ -39,9 +39,10 @@
         .admin-btn {
             display: block;
             width: 200px;
-            margin: 20px auto; /* Spazio sopra il supporto */
+            margin-bottom: 20px auto; /* Spazio sopra il supporto */
             font-size: 20px;
             text-align: center;
+
         }
 
     </style>
