--- a/old_index.html
+++ b/old_index.html
@@ -39,10 +39,9 @@
         .admin-btn {
             display: block;
             width: 200px;
-            margin-bottom: 50px auto; /* Spazio sopra il supporto */
+         margin: 100px auto 20px auto; /* 100px sopra per alzarlo ancora di più */
             font-size: 20px;
-            text-align: center;
-
+         text-align: center;
         }
 
     </style>
